--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,11 @@
 journeyplanner {
 
+  http {
+    host = localhost
+    port = 8081
+    timeout = 5 seconds
+  }
+
   ws {
     host = localhost
     port = 8082
